# ExpressFunctionApp/app.js
@@ -4,6 +4,7 @@ const axios = require("axios");
 const bodyParser = require("body-parser");
 const crypto = require("crypto");
 const fileType = require("file-type");
+const fs = require("fs");
 const jsonfile = require("jsonfile");
 const multer = require("multer");
 const storage = multer.memoryStorage();
@@ -68,6 +69,24 @@ app.all('/api/echo/:status?', (req, res) => {
 
 app.get('/api/files/errors/:status', (req, res) => {
   res.status(req.params.status).send();
+});
+
+app.get('/api/files/download/base64', (req, res) => {
+  const filepath = path.join(__dirname, 'files', 'publicdomain.png');
+  const file = fs.readFileSync(filepath);
+
+  const content = file.toString('base64');
+  const hash = crypto.createHash('md5').update(file).digest("hex");
+
+  let response = {
+    "fileContent": content,
+    "originalName": "publicdomain.png",
+    "mimeType": "image/png",
+    "md5": hash,
+    "size": Buffer.byteLength(file)
+  };
+
+  res.json(response);
 });
 
 app.post('/api/files/upload/base64', async (req, res) => {
