# ExpressFunctionApp/docs/swagger.json
@@ -94,6 +94,46 @@
         }
       }
     },
+    "/files/download/base64": {
+      "get": {
+        "summary": "Downloads file by base64",
+        "description": "Downloads file by base64",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "fileContent": {
+                  "type": "string",
+                  "format": "byte"
+                },
+                "originalName": {
+                  "type": "string",
+                  "description": "Original file name Output",
+                  "x-ntx-summary": "Original file name Output"
+                },
+                "mimeType": {
+                  "type": "string",
+                  "description": "MIME type Output",
+                  "x-ntx-summary": "MIME type Output"
+                },
+                "md5": {
+                  "type": "string",
+                  "description": "MD5 Output",
+                  "x-ntx-summary": "MD5 Output"
+                },
+                "size": {
+                  "type": "integer",
+                  "description": "File size Output",
+                  "x-ntx-summary": "File size Output"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/files/upload/base64": {
       "post": {
         "summary": "Uploads file by base64",
